--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Colin Burdine"
-  avatar           : "profile.png"
+  avatar           : "head_bw.png"
   bio              : "A renegade computer scientist, interested in quantum computing, machine learning, and mathematics."
   location         : "Baylor University"
   employer         :
