updated about page

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Colin Burdine"
   avatar           : "burdine_head.png"
-  bio              : "A renegade computer scientist, interested in quantum computing, machine learning, and mathematics."
+  bio              : "A renegade computer scientist interested in quantum computing, machine learning, and mathematics."
   location         : "Baylor University"
   employer         :
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
